syntax = "proto3";

option csharp_namespace = "TherapeutKalendar.Shared.Protos";

service AuthService {
  rpc Authenticate (AuthRequest) returns (AuthResponse);
  rpc ValidateToken (TokenRequest) returns (TokenValidationResponse);
}

message AuthRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
  int64 expires_at = 2;
}

message TokenRequest {
  string token = 1;
}

message TokenValidationResponse {
  bool is_valid = 1;
  string user_id = 2;
  string role = 3;
}